<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meansure Steps</string>
    <string name="measureSteps">Measure Steps While Walking</string>
    <string name="getReport">Monitor Mobile Sensor Values</string>
    <string name="title_activity_start_measuring_steps">Measure Steps Walked</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="hello_world">hello_world</string>
    <string name="noOfStepsnoOfSteps">GetSensorsReportActivity</string>
    <string name="title_activity_measure_steps">MeasureStepsActivity</string>
    <string name="noOfSteps">0</string>
    <string name="steps_walked">Steps Walked (1 step = 0.5 Meter)</string>
    <string name="distanceCovered">Distance Covered In Miles</string>
    <string name="title_activity_get_sensors_report">Get Mobile Sensors Report</string>
    
    <string name="light">Light</string>
    <string name="battery">Battery</string>
    <string name="empty_string">NA</string>
    <string name="mode">Mode</string>
    <string name="orientation">Orientation</string>
    <string name="temp">Temperature</string>
    <string name="gravity">Gravity</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="proximity">Proximity</string>
    <string name="steps">Step Counter</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="acceln">Linear Accln</string>

</resources>
