<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/stapesWalkedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startStop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:enabled="false"
        android:text="@string/steps_walked"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/inside" />

    <TextView
        android:id="@+id/distanceCovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noOfSteps"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:enabled="false"
        android:text="@string/distanceCovered"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/inside" />

    <TextView
        android:id="@+id/noOfSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stapesWalkedLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_button_shape"
        android:enabled="false"
        android:gravity="center"
        android:textColor="@color/black"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/noOfSteps"
        android:textSize="35sp"
        android:width="150dp" />

    <TextView
        android:id="@+id/distanceInMiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distanceCovered"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@drawable/round_button_shape"
        android:enabled="false"
        android:textColor="@color/black"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/noOfSteps"
        android:textSize="35sp"
        android:width="150dp" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/stapesWalkedLabel"
        android:layout_alignLeft="@+id/stapesWalkedLabel"
        android:background="@drawable/round_button_shape"
        android:text="@string/start"
        android:textColor="@color/black"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"
        android:width="125dp" />

    <Button
        android:id="@+id/startStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/stapesWalkedLabel"
        android:layout_marginTop="31dp"
        android:background="@drawable/round_button_shape"
        android:text="@string/stop"
        android:textColor="@color/black"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"
        android:width="125dp" />

</RelativeLayout>