<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:paddingTop="12dp"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/battery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="9dp"
            android:text="@string/battery"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/inside" />

        <TextView
            android:id="@+id/batteryValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/round_button_shape"
            android:gravity="center"
            android:padding="9dp"
            android:text="@string/empty_string"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/brightness"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="9dp"
            android:text="@string/light"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/inside" />

        <TextView
            android:id="@+id/brightnessValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/round_button_shape"
            android:gravity="center"
            android:padding="9dp"
            android:text="@string/empty_string"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="9dp"
            android:text="@string/mode"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/inside" />

        <TextView
            android:id="@+id/modeValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/round_button_shape"
            android:gravity="center"
            android:padding="9dp"
            android:text="@string/empty_string"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/temperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="9dp"
            android:text="@string/temp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/inside" />

        <TextView
            android:id="@+id/temperatureValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/round_button_shape"
            android:gravity="center"
            android:padding="9dp"
            android:text="@string/empty_string"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gravity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="9dp"
            android:text="@string/gravity"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/inside" />

        <TextView
            android:id="@+id/gravityValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/round_button_shape"
            android:gravity="center"
            android:padding="9dp"
            android:text="@string/empty_string"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/gyroscope"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="9dp"
            android:text="@string/gyroscope"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/inside" />

        <TextView
            android:id="@+id/gyroscopeValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/round_button_shape"
            android:gravity="center"
            android:padding="9dp"
            android:text="@string/empty_string"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/proximity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="9dp"
            android:text="@string/proximity"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/inside" />

        <TextView
            android:id="@+id/proximityValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/round_button_shape"
            android:gravity="center"
            android:padding="9dp"
            android:text="@string/empty_string"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/steps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="9dp"
            android:text="@string/steps"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/inside" />

        <TextView
            android:id="@+id/stepsValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/round_button_shape"
            android:gravity="center"
            android:padding="9dp"
            android:text="@string/empty_string"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/pressure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="9dp"
            android:text="@string/pressure"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/inside" />

        <TextView
            android:id="@+id/pressureValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/round_button_shape"
            android:gravity="center"
            android:padding="9dp"
            android:text="@string/empty_string"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/humidity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="9dp"
            android:text="@string/humidity"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/inside" />

        <TextView
            android:id="@+id/humidityValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/round_button_shape"
            android:gravity="center"
            android:padding="9dp"
            android:text="@string/empty_string"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/acceln"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="9dp"
            android:text="@string/acceln"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/inside" />

        <TextView
            android:id="@+id/accelnValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/round_button_shape"
            android:gravity="center"
            android:padding="9dp"
            android:text="@string/empty_string"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</LinearLayout>